--- a/Homework6.qmd
+++ b/Homework6.qmd
@@ -14,6 +14,11 @@ editor: visual
 
 ## Task 2: Writing R Functions
 
+```{r}
+# Load Libraries
+library(tidyverse)
+```
+
 1.  Write a basic function (call it getRMSE()) that takes in a vector of responses and a vector of predictions and outputs the RMSE. If a value is missing for the vector of responses (i.e. an NA is present), allow for additional arguments to the mean() function (elipses) that removes the NA values in the computation.
 
 ```{r}
@@ -201,3 +206,73 @@ getMetrics(resp, pred, na.rm = TRUE)
 ```
 
 ## Task 3: Practice with purrr
+
+```{r}
+# Create a list object to work with
+lm_fit1 <- lm(Sepal.Length ~ Sepal.Width + Species, data = iris)
+```
+
+1.  Pull out the coefficients list element using \$, coef(), and the pluck() function from purrr.
+
+```{r}
+lm_fit1$coefficients
+
+coef(lm_fit1)
+
+lm_fit1 |>
+  pluck(coefficients)
+```
+
+2.  Let's fit a number of different models with the code below!
+
+```{r}
+lm_fit2 <- lm(Sepal.Length ~ Sepal.Width, data = iris)
+lm_fit3 <- lm(Sepal.Length ~ Petal.Width + Sepal.Width + Species, data = iris)
+lm_fit4 <- lm(Sepal.Length ~ Petal.Width + Petal.Length + Sepal.Width + Species,
+data = iris)
+fits <- list(lm_fit1, lm_fit2, lm_fit3, lm_fit4)
+```
+
+Now use purrr::map() function to pull out the coefficients of each model fit from the fits object.
+
+```{r}
+fits |>
+  map(pluck(coefficients))
+```
+
+3.  There is a function called confint() that creates confidence intervals for the coefficients in an lm() fit. We apply that function directly to the fitted object like this:
+
+```{r}
+confint(lm_fit1)
+```
+
+Use map() to apply the confint() function to each model fit in the fits object.
+
+```{r}
+fits |> 
+  map(confint)
+```
+
+4.  Next, let's create histograms of the residuals in each model fit! Run the code here to set up a 2x2 plotting window.
+
+```{r}
+# Create 2x2 plotting window
+par(mfrow = c(2, 2))
+```
+
+Now, pull out the residual vectors (the resid elements of your fits) using map(). Then use the walk() function with hist to create plots.
+
+```{r}
+fits |>
+  map(pluck(resid)) |>
+  walk(hist)
+```
+
+5.  The names aren't good, let's try to fix that! On the list that is created from the map() function used on the resid element, use the purrr::set_names() function to give the names "fit1", "fit2", "fit3", and "fit4" to the elements.
+
+```{r}
+fits |>
+  map(pluck(resid)) |>
+  set_names(c("fit1", "fit2", "fit3", "fit4")) |>
+  iwalk(\(Residuals, idx) hist(Residuals, main = idx))
+```
